# rate-ukma

./: .act.secrets.sample  .actrc.sample  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  .yamllint.yaml  CONTRIBUTING.md  COPYING  LICENSE  Project-Description.md  README.md  TeamCharter.md  calculate_dora_metrics.py  dora-metrics-report.md  metrics-raw.md  openapi-generated.yaml  semantic-commit.sh
src/backend/: .dockerignore  AGENTS.md  Dockerfile  README.md  conftest.py  django-entrypoint.sh  manage.py  openapi-generated.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
src/backend/docs/: api-documentation.md
src/backend/monitoring/: locustfile.py
src/backend/rateukma/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/rateukma/app_metadata/: bot_detection.py
src/backend/rateukma/caching/: cache_manager.py  decorators.py  instances.py  patterns.py  test_cache.py  types_extensions.py  types_extenstions.py
src/backend/rateukma/ioc/: __init__.py  decorators.py  instances.py  test_decorators.py
src/backend/rateukma/protocols/: __init__.py  artifacts.py  decorators.py  django.py  generic.py
src/backend/rateukma/settings/: _base.py  _logging.py  dev.py  prod.py  testing.py
src/backend/rating_app/: apps.py  constants.py  middleware.py  urls.py  utils.py
src/backend/rating_app/admin/: __init__.py  base.py  models.py
src/backend/rating_app/api_spec/: mappers.py
src/backend/rating_app/application_schemas/: comment.py  course.py  course_instructor.py  course_offering.py  department.py  enrollment.py  faculty.py  instructor.py  notification.py  pagination.py  rating.py  rating_vote.py  semester.py  speciality.py  student.py  validators.py
src/backend/rating_app/auth/: microsoft_account_adapters.py  microsoft_avatar.py  social_account_adapters.py  test_microsoft_account_adapters.py  test_oauth_integration.py
src/backend/rating_app/domain_models/: course.py
src/backend/rating_app/dto/: course.py
src/backend/rating_app/exception/: comment_exception.py  course_exceptions.py  course_instructor_exceptions.py  department_exceptions.py  enrollment_exceptions.py  exception_handler.py  faculty_exceptions.py  instructor_exceptions.py  notification_exceptions.py  rating_exceptions.py  semester_exception.py  speciality_exceptions.py  student_exceptions.py  user_exceptions.py  vote_exceptions.py
src/backend/rating_app/filters/: __init__.py  course_filter_options.py  course_filters.py  course_payload.py  course_result.py
src/backend/rating_app/ioc_container/: auth.py  common.py  repos.py  repositories.py  services.py  web.py
src/backend/rating_app/migrations/: 0001_initial.py  0002_alter_course_ukma_id_alter_course_year.py  0002_alter_speciality_options.py  0003_add_default_empty_string_to_text_fields.py  0004_alter_student_education_level.py  0005_add_email_to_student.py  0006_faculty_custom_abbreviation.py  0007_speciality_alias.py  0008_course_avg_difficulty_course_avg_usefulness_and_more.py  0009_alter_course_avg_difficulty_and_more.py  0010_add_course_indexes.py  0011_ratingvote.py  0012_alter_coursespeciality_options_alter_ratingvote_type_and_more.py  0013_courseofferingspeciality.py  0014_courseofferingspeciality_type_kind_nullable.py  0015_add_coursespeciality_spec_type_idx.py  0015_remove_course_specialities_delete_coursespeciality.py  0016_student_avatar.py  0017_courseofferingspeciality_speciality_type_idx.py  0018_ratingvote_rating_type_idx.py  0019_perf_rating_created_at_idx_remove_co_ordering.py  0020_course_title_trigram_idx.py  0021_alter_courseofferingspeciality_type_kind.py  0021_course_education_level_courseoffering_study_year_and_more.py  0021_merge_duplicate_faculties.py  0021_notification_notificationcursor_and_more.py  0022_course_identity_unique_constraint.py  0022_notification_group_read.py  0023_merge_20260326_2138.py  0024_merge_20260329_1248.py  0025_add_instructor_to_rating.py  0026_comment_alter_notification_event_type_and_more.py  0026_update_instructor_max_length.py  0027_comment_alter_notification_event_type_and_more.py  0028_simplify_instructor_add_email.py  0029_rating_instructors_m2m.py
src/backend/rating_app/models/: __init__.py  choices.py  comment.py  course.py  course_instructor.py  course_offering.py  course_offering_speciality.py  course_offering_term.py  course_speciality.py  department.py  enrollment.py  faculty.py  instructor.py  intructor_assignment.py  notification.py  person.py  rating.py  rating_vote.py  semester.py  speciality.py  student.py
src/backend/rating_app/pagination/: __init__.py  paginator.py
src/backend/rating_app/queries/: rating_popularity.py
src/backend/rating_app/repositories/: __init__.py  comment_repository.py  course_instructor_repository.py  course_offering_repository.py  course_repository.py  department_repository.py  enrollment_repository.py  faculty_repository.py  instructor_repository.py  notification_repository.py  protocol.py  rating_repository.py  semester_repository.py  speciality_repository.py  student_repository.py  student_stats_repository.py  test_comment_repository.py  test_course_instructor_repository.py  test_course_offering_repository.py  test_course_repository.py  test_department_repository.py  test_enrollment_repository.py  test_faculty_repository.py  test_instructor_repository.py  test_semester_repository.py  user_repository.py  (+6 more)
src/backend/scraper/: auth.py  browser.py  test_auth.py  test_browser.py
(+599 files in other folders)
